infrastructure/kubernetes/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-backend
  labels:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/component: backend
