infrastructure/kubernetes/06-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service
  namespace: devops-backend
  labels:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devops-api
    app.kubernetes.io/component: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
